@@ -1,3 +1,9 @@
+2026-01-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-sh-handle-copy-directory): Check for
+	`tramp-method-out-of-band-p' explicitly.
+	(tramp-method-out-of-band-p): There shouldn't be a multi-hop.
+
 2026-01-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-get-ls-command): Prefer gnuls over ls.
